Change text color to black on on-hold entries for more contrast

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -92,7 +92,7 @@
     li.active_h > a, li.active_h > a:hover, li.active_h > a:focus {
         background-image: none !important;
         background-color: #FFE880 !important;
-        color: #FFFFFF !important;
+        color: #000000 !important;
         opacity: 1.0 !important;
     }
 
