Move CSS to another file

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,98 +12,7 @@
 
 
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <style type="text/css">
-      body {
-        padding-top: 10px;
-        padding-bottom: 40px;
-        text-decoration: none;
-      }
-
-      a {
-        outline: 0 !important;
-      }
-
-
-    .legend_c { border-left: #3090B4 3px solid; padding-left: 4px;}
-    .legend_w { border-left: #00AB3F 3px solid; padding-left: 4px;}
-    .legend_q { border-left: #DB95E5 3px solid; padding-left: 4px;}
-    .legend_h { border-left: #FFE880 3px solid; padding-left: 4px;}
-    .legend_d { border-left: #FF6F6F 3px solid; padding-left: 4px;}
-    
-    .legend_c:hover:not(.active_c) {filter: alpha(opacity=60); opacity: 0.6;}
-    .legend_w:hover:not(.active_w) {filter: alpha(opacity=60); opacity: 0.6;}
-    .legend_q:hover:not(.active_q) {filter: alpha(opacity=60); opacity: 0.6;}
-    .legend_h:hover:not(.active_h) {filter: alpha(opacity=60); opacity: 0.6;}
-    .legend_d:hover:not(.active_d) {filter: alpha(opacity=60); opacity: 0.6;}
-
-
-    li.s_c > a:hover{
-        background-image: none !important;
-        background-color: #3090B4 !important;
-        color: #FFFFFF !important;    
-    }
-
-    li.s_w > a:hover{
-        background-image: none !important;
-        background-color: #00AB3F !important;
-        color: #FFFFFF !important;
-    }
-
-    li.s_q > a:hover{
-        background-image: none !important;
-        background-color: #DB95E5 !important;
-        color: #FFFFFF !important;
-    }
-
-    li.s_h > a:hover{
-        background-image: none !important;
-        background-color: #FFE880 !important;
-        color: #222 !important;      
-    }
-
-    li.s_d > a:hover{
-        background-image: none !important;
-        background-color: #FF6F6F !important;
-        color: #FFFFFF !important;    
-    }
-
-
-    li.active_c > a, li.active_c > a:hover, li.active_c > a:focus {
-        background-image: none !important;
-        background-color: #3090B4 !important;
-        color: #FFFFFF !important;
-        opacity: 1.0 !important;
-    }
-
-    li.active_w > a, li.active_w > a:hover, li.active_w > a:focus {
-        background-image: none !important;
-        background-color: #00AB3F !important;
-        color: #FFFFFF !important;
-        opacity: 1.0 !important;
-    }
-
-    li.active_q > a, li.active_q > a:hover, li.active_q > a:focus {
-        background-image: none !important;
-        background-color: #DB95E5 !important;
-        color: #FFFFFF !important;
-        opacity: 1.0 !important;
-    }
-
-    li.active_h > a, li.active_h > a:hover, li.active_h > a:focus {
-        background-image: none !important;
-        background-color: #FFE880 !important;
-        color: #000000 !important;
-        opacity: 1.0 !important;
-    }
-
-    li.active_d > a, li.active_d > a:hover, li.active_d > a:focus {
-        background-image: none !important;
-        background-color: #FF6F6F !important;
-        color: #FFFFFF !important;
-        opacity: 1.0 !important;
-    }    
-
-    </style>
+    <link href="/static/profile.css" rel="stylesheet">
 
     <script type="text/javascript">
       var last_i = '0';
