--- a/templates/profile.html
+++ b/templates/profile.html
@@ -50,6 +50,16 @@
 
       <div class="row-fluid">
         <div class="span3">
+        <div class="legend">
+          <span class="legend"><u>Legend</u></span>
+          <ul class="legend">
+            <li class="legend_c_box">Current</li>
+            <li class="legend_w_box">Watched</li>
+            <li class="legend_q_box">To Watch</li>
+            <li class="legend_h_box">On Hold</li>
+            <li class="legend_d_box">Dropped</li>
+          </ul>
+        </div>
           <div class="sidebar-nav">
             <ul class="nav nav-list">
               {% for item in db['items'] %}<li id="{{ item['id'] }}" class="s_{{ item['status'] }} legend_{{ item['status'] }}"><a href="#" onclick="select({{ item['id'] }}, '{{ item['status'] }}'); return false;">{{ item['name'] }}</a></li>{% endfor %}
