--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,9 +22,9 @@
         <div class="container-fluid">
           <a class="brand" href="#">Futaam</a>
           <div class="nav-collapse collapse">
-            <p class="navbar-text pull-right">
+            {% if mode == 'public' %}<p class="navbar-text pull-right">
               Logged in as <a href="#" class="navbar-link">Username</a>
-            </p>
+            </p> {% endif %}
             <!--<ul class="nav">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">About</a></li>
