Point home.html to home.{css,js} instead of profile.{css,js}

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,10 +9,10 @@
 
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/static/profile.js"></script>
+    <script src="/static/home.js"></script>
 
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/profile.css" rel="stylesheet">
+    <link href="/static/home.css" rel="stylesheet">
   </head>
 
   <body>
