--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ db.name }}</title>
+    <title>{{ info['db'].name }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -18,11 +18,24 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="brand" href="#">Futaam</a>
+          <a class="brand" href="/">Futaam</a>
+          <div class="nav-collapse collapse">
+            {% if info['mode'] == 'public' %}
+            {% if info['logged_in'] %}<p class="navbar-text pull-right">
+              Logged in as <a href="#" class="navbar-link">{{ info['username'] }}</a>
+            </p> {% else %} <p class="navbar-text pull-right">
+              <a href="/login" class="navbar-link">login</a> or <a href="/register" class="navbar-link">register</a>
+            </p> {% endif %}
+
+             {% endif %}
+            <!--<ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+            </ul> -->
+          </div>
         </div>
       </div>
     </div>
-
     <div class="well" style="margin-top: 50px; margin-left: 30%; margin-right: 30%;">
       <form action="" method="post">
         <input type="text" name="username" placeholder="Username" style="width: 100%;" /> <br />
