--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
   <body>
 
     <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
+      <div class="navbar-inner" style="/*background: none !important;*/">
         <div class="container-fluid">
           <a class="brand" href="/">Futaam</a>
           <div class="nav-collapse collapse">
@@ -39,5 +39,9 @@
       </div>
     </div>
 
+    <div style="position: fixed; margin-top: 30px; width: 100%; height: 300px; background-color: #ddd; padding-top: 10px;">
+      <div style="margin-top: 30px; padding-top: 10px; padding-left: 15%; font-size: 70px; font-weight: normal; line-height: 1; color: #121212; letter-spacing:-1px; width: 500px;">Watch animu better, together.</div>
+      <div style="margin-top: 30px; padding-left: 15%; font-size: 21px; font-weight: normal; line-height: 1; color: #121212; width: 500px;">Powerful collaboration, taste review, and backlog management for pros and plebs</div> 
+    </div>
   </body>
 </html>
