Change "Futaam" to "FutaHub" on header --oops

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner" style="/*background: none !important;*/">
         <div class="container-fluid">
-          <a class="brand" href="/">Futaam</a>
+          <a class="brand" href="/">FutaHub</a>
           <div class="nav-collapse collapse">
             {% if info['mode'] == 'public' %}
             {% if info['logged_in'] %}<p class="navbar-text pull-right">
