--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="brand" href="/">Futaam</a>
+          <a class="brand" href="/">FutaHub</a>
           <div class="nav-collapse collapse">
             {% if info['mode'] == 'public' %}
             {% if info['logged_in'] %}<p class="navbar-text pull-right">
@@ -36,7 +36,7 @@
         </div>
       </div>
     </div>
-    
+
     <div class="well" style="margin-top: 50px; margin-left: 30%; margin-right: 30%;">
       <form action="" method="post">
         <input type="text" name="username" placeholder="Username" style="width: 100%;" /> <br />
