--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,7 @@
 
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/static/home.css" rel="stylesheet">
+    <link href="/static/global.css" rel="stylesheet">
   </head>
 
   <body>
@@ -23,8 +24,16 @@
           <a class="brand" href="/">FutaHub</a>
           <div class="nav-collapse collapse">
             {% if info['mode'] == 'public' %}
-            {% if info['logged_in'] %}<p class="navbar-text pull-right">
-              Logged in as <a href="#" class="navbar-link">{{ info['username'] }}</a> (<a href="/logout" class="navbar-link">logout</a>)
+            {% if info['logged_in'] %}
+              <div class="dropdown pull-right navbar-text">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">(+)</a>
+                  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                    <li><a href="/newdb">Create a new database</a></li>
+                    <li><a href="/settings">Settings</a></li>
+                  </ul>
+              </div>
+              <p class="navbar-text pull-right">
+              Logged in as <a href="#" class="navbar-link">{{ info['username'] }}</a> (<a href="/logout" class="navbar-link">logout</a>)&nbsp;
             </p> {% else %} <p class="navbar-text pull-right">
               <a href="/login" class="navbar-link">login</a> or <a href="/register" class="navbar-link">register</a>
             </p> {% endif %}
