Implement /newdb_existing; creating databases from existing ones should work now

--- a/templates/newdb.html
+++ b/templates/newdb.html
@@ -72,7 +72,7 @@
         </div>
         <div id="collapseTwo" class="accordion-body collapse">
           <div class="accordion-inner">
-            <form action="/newdb_existing" method="post">
+            <form action="/newdb_existing" method="post" enctype="multipart/form-data">
               <p><input type="file" name="dbfile" style="width: 100%;" /></p>
               <p><input type="submit" value="Create" style="width: 100%;" /></p>
             </form>
