--- a/templates/entry_details.html
+++ b/templates/entry_details.html
@@ -1,42 +1,85 @@
-{% if entry['type'] == 'anime' %}
-	<img src="{{ deep['image_url'] }}" style="float: left; padding-right: 10px;" />
-	<h1>{{ entry['name'] }}</h1>
-	<b>Status: </b>{{ trstatus }}<br />
-	<b>Last episode watched: </b>{{ entry['lastwatched'] }}<br />
-	<b>Total episodes: </b>{{ deep['episodes'] }}<br />
-	<b>Genre: </b>{{ entry['genre'] }}<br />
-	{% if deep['end_date'] != None %}
-		<b>Year: </b>{{ deep['start_date'] }} - {{ deep['end_date'] }}<br />
-	{% else %}
-		<b>Year: </b>{{ deep['start_date'] }} - ongoing<br />
-	{% endif %}
-	<b>Type: </b>{{ deep['type'] }}<br />
-	<b>Classification: </b>{{ deep['classification'] }}<br />
-	<b>Synopsis: </b>{% autoescape false %}
-{{ deep['synopsis'] }}{% endautoescape %}<br />
-	<br />{% if entry['obs'] != '' %}<b>Observations: </b>{{ entry['obs'] }}{% else %}<b>No observations</b>{% endif %}
-{% elif entry['type'] == 'manga' %}
-	<img src="{{ deep['image_url'] }}" style="float: left; padding-right: 10px;" />
-	<h1>{{ entry['name'] }}</h1>
-	<b>Status: </b>{{ trstatus }}'<br />
-	<b>Last chapter/volume read: </b>{{ entry['lastwatched'] }}<br />
-	<b>Chapters/volumes: </b>{{ deep['chapters'] }}/{{ deep['volumes'] }}<br />
-	<b>Type: </b>{{ deep['type'] }}<br />
-	<b>Synopsis: </b>{% autoescape false %}
-{{ deep['synopsis'] }}{% endautoescape %}<br />
-	<br />{% if entry['obs'] != '' %}<b>Observations: </b>{{ entry['obs'] }}{% else %}<b>No observations</b>{% endif %}
-{% elif entry['type'] == 'vn' %}
-	<img src="{{ deep['image'] }}" style="float: left; padding-right: 10px;" />
-	{% if aliases_len == 0 %}
-		<h1>{{ deep['title'] }}</h1>'
-	{% else %}
-		<h1>{{ deep['title'] }}</h1><h3> [{{ deep['aliases'] }}]</h1>
-	{% endif %}
-	<b>Status: </b>{{ trstatus }}<br />
-	<b>Platforms: </b>{{ platforms }}<br />
-	<b>Released: </b>{{ deep['released'] }}<br />
-	<b>Languages: </b>{{ deep['languages'] }}<br />
-	<b>Synopsis: </b>{% autoescape false %}
-{{ deep['description'] }}{% endautoescape %}<br />
-	<br />{% if entry['obs'] != '' %}<b>Observations: </b>{{ entry['obs'] }}{% else %}<b>No observations</b>{% endif %}
-{% endif %}
+<div class="accordion" id="accordion2">
+  <div class="accordion-group">
+    <div class="accordion-heading">
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+        Entry overview
+      </a>
+    </div>
+    <div id="collapseOne" class="accordion-body collapse in">
+      <div class="accordion-inner">
+		{% if entry['type'] == 'anime' %}
+			<img src="{{ deep['image_url'] }}" style="float: right; padding-right: 10px;" />
+			<h1>{{ entry['name'] }}</h1>
+			<b>Status: </b>{{ trstatus }}<br />
+			<b>Last episode watched: </b>{{ entry['lastwatched'] }}<br />
+			<b>Total episodes: </b>{{ deep['episodes'] }}<br />
+			<b>Genre: </b>{{ entry['genre'] }}<br />
+			{% if deep['end_date'] != None %}
+				<b>Year: </b>{{ deep['start_date'] }} - {{ deep['end_date'] }}<br />
+			{% else %}
+				<b>Year: </b>{{ deep['start_date'] }} - ongoing<br />
+			{% endif %}
+			<b>Type: </b>{{ deep['type'] }}<br />
+			<b>Classification: </b>{{ deep['classification'] }}<br />
+			<b>Synopsis: </b>{% autoescape false %}
+		{{ deep['synopsis'] }}{% endautoescape %}<br />
+			<br />{% if entry['obs'] != '' %}<b>Observations: </b>{{ entry['obs'] }}{% else %}<b>No observations</b>{% endif %}
+		{% elif entry['type'] == 'manga' %}
+			<img src="{{ deep['image_url'] }}" style="float: right; padding-right: 10px;" />
+			<h1>{{ entry['name'] }}</h1>
+			<b>Status: </b>{{ trstatus }}'<br />
+			<b>Last chapter/volume read: </b>{{ entry['lastwatched'] }}<br />
+			<b>Chapters/volumes: </b>{{ deep['chapters'] }}/{{ deep['volumes'] }}<br />
+			<b>Type: </b>{{ deep['type'] }}<br />
+			<b>Synopsis: </b>{% autoescape false %}
+		{{ deep['synopsis'] }}{% endautoescape %}<br />
+			<br />{% if entry['obs'] != '' %}<b>Observations: </b>{{ entry['obs'] }}{% else %}<b>No observations</b>{% endif %}
+		{% elif entry['type'] == 'vn' %}
+			<img src="{{ deep['image'] }}" style="float: right; padding-right: 10px;" />
+			{% if aliases_len == 0 %}
+				<h1>{{ deep['title'] }}</h1>'
+			{% else %}
+				<h1>{{ deep['title'] }}</h1><h3> [{{ deep['aliases'] }}]</h1>
+			{% endif %}
+			<b>Status: </b>{{ trstatus }}<br />
+			<b>Platforms: </b>{{ platforms }}<br />
+			<b>Released: </b>{{ deep['released'] }}<br />
+			<b>Languages: </b>{{ deep['languages'] }}<br />
+			<b>Synopsis: </b>{% autoescape false %}
+		{{ deep['description'] }}{% endautoescape %}<br />
+			<br />{% if entry['obs'] != '' %}<b>Observations: </b>{{ entry['obs'] }}{% else %}<b>No observations</b>{% endif %}
+		{% endif %}
+
+      </div>
+    </div>
+  </div>
+  {% if (entry['type'] == 'anime') or (entry['type'] == 'manga') %}<div class="accordion-group">
+    <div class="accordion-heading">
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+        Characters
+      </a>
+    </div>
+    <div id="collapseTwo" class="accordion-body collapse">
+      <div class="accordion-inner">
+        {% for char in characters[0] %}
+        	<a href="#" onclick="showBiography('{{ char }}', '{{ characters[1][loop.index - 1] }}'); return false"><img src="{{ characters[2][loop.index - 1] }}" alt="[{{ char }}]" title="[{{ char }}]" /></a>
+        {% endfor %}
+
+        <br />
+        <div id="biography"></div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-group">
+    <div class="accordion-heading">
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
+        Subbing groups
+      </a>
+    </div>
+    <div id="collapseThree" class="accordion-body collapse">
+      <div class="accordion-inner">
+        lel faget
+      </div>
+    </div>
+  </div> {% endif %}
+</div>
