--- a/templates/newdb.html
+++ b/templates/newdb.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="/static/jquery.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
 
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
