--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="/static/jquery.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     <script src="/static/profile.js"></script>
 
