--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -18,7 +18,7 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top" style="z-index: 9002;">
       <div class="navbar-inner" style="/*background: none !important;*/">
         <div class="container-fluid">
           <a class="brand" href="/">FutaHub</a>
@@ -48,7 +48,9 @@
       </div>
     </div>
     
-    <a href="#" onclick="toggle_info(); return false;"><span style="width: auto; height: 20px; position: fixed; margin-top: 40px; margin-left: -1px; color: #BDBDBD; margin-bottom: -10px; margin-left: 20px; z-index: 1000;" id="butan" onMouseOver="this.style.color='#8E8E8E'" onMouseOut="this.style.color='#BDBDBD'">[hide panel]</a>
+    <!--<a href="#" onclick="toggle_info(); return false;"><span style="width: auto; height: 20px; position: fixed; margin-top: 40px; margin-left: -1px; color: #BDBDBD; margin-bottom: -10px; margin-left: 20px; z-index: 1000;" id="butan" onMouseOver="this.style.color='#8E8E8E'" onMouseOut="this.style.color='#BDBDBD'">[hide panel]</a> -->
+    <div style="background-color: #1f1f1f; color: #999999; z-index: 9001; transform: rotate(90deg); float: left; position: fixed; left: -90px; top: 171px; width: 223px; margin-left: 0px; padding: 0px; text-align: center; cursor: pointer;" onclick="toggle_info()" id="butan">hide panel</div>
+
     <div style="margin-top: 60px; margin-left: 20px; float: left; position: fixed;" id="profile_info">
       <a href="http://gravatar.com/emails/" title="Change your avatar at gravatar!"> <img src="http://gravatar.com/avatar/{{ info['db']['users'][user]['email_hash'] }}?s=210" style="padding: 5px; border: 1px solid #AABAC5; margin-bottom: 10px;" /> </a><br />
       <span style="font-size: 22px; font-weight: bold;">{{ info['db']['users'][user]['username'] }}</span> <br />
@@ -112,7 +114,7 @@
           </div>
         </div>
         {% if leng != 0 %}
-        <div class="span9" style="margin-left: 320px; position: absolute;" id="dc">
+        <div class="span9" style="margin-left: 335px; position: absolute;" id="dc">
           <div class="breadcrumb" id="dcontent" style="width: 60%;">
           </div>
         </div>
