--- a/templates/home.html
+++ b/templates/home.html
@@ -49,10 +49,11 @@
     </div>
 
     <div style="margin-top: 30px; width: 100%; height: 300px; background-color: #ddd; padding: 10px 0px 40px 0px;">
-      <div style="margin-top: 30px; padding-top: 10px; padding-left: 15%; font-size: 70px; font-weight: normal; line-height: 1; color: #121212; letter-spacing:-1px; width: 500px;">
+      <div style="float: left; margin-top: 30px; padding-top: 10px; padding-left: 15%; font-size: 70px; font-weight: normal; line-height: 1; color: #121212; letter-spacing:-1px; width: 500px;">
         Watch animu better, together.
         <div style="margin-top: 30px; font-size: 21px;">Powerful collaboration, taste review, and backlog management for pros and plebs</div> 
       </div>
+      <div style="float: left; margin-top: 30px;"><!-- placeholder for avatar list --></div>
     </div>
   </body>
 </html>
