--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -111,6 +111,18 @@
               <span class="sort_btn" id="sort_btn_status">Status</span>
             </div>
 
+        <div class="legend">
+          <span class="legend"><u>Legend</u></span>
+          <ul class="legend_user">
+            <li class="legend_c_box">Current</li>
+            <li class="legend_w_box">Watched</li>
+            <li class="legend_q_box">To Watch</li>
+            <li class="legend_h_box">On Hold</li>
+            <li class="legend_d_box">Dropped</li>
+          </ul>
+        </div>
+
+
             <div id="listNav">
               <ul class="nav nav-list">
                 {% if leng == 0 %}
