--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -140,7 +140,7 @@
         </div>
         {% if leng != 0 %}
         <div class="span9" style="margin-left: 335px; position: absolute;" id="dc">
-          <div class="breadcrumb" id="dcontent" style="width: 60%; height: 20px;">
+          <div id="dcontent" style="width: 60%; height: 20px;">
           </div>
         </div>
         {% endif %}
